tests/NormalTests/paczka1/small_fuzzy/31642533.err
Error in line 6: kXqUcYhcZ A18 15,99
Error in line 3: 6uHwIPTFhwe A666 50,4
Error in line 5: S27 A18 73,5
Error in line 1: t3pyp S27 21,8
